# Audio-keepawake

./: .clang-format  CMakeLists.txt  README.md  build.sh  install.sh
documents/: systemd_and_issues.txt
service/: audio-keepawake.service
src/: main.c
